MOA-222: annotator, keyboard shortcuts without shift, easier with one hand. Focus return to OL after selecting allograph. Fix modify -> transform mode from keyboard.

--- a/digipal/static/css/dpannotator.css
+++ b/digipal/static/css/dpannotator.css
@@ -754,3 +754,7 @@ div.jquery-notebook p:first-child {
 .dialog_annotations .tab-content {
     padding: 0.5em;
 }
+
+#map:focus {
+    outline: 1px solid #C9C9D1;
+}
